--- a/package.json
+++ b/package.json
@@ -16,6 +16,13 @@
     "url": "https://www.polinome.com"
   },
   "license": "ISC",
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "load-grunt-tasks": "~0.4.0",
+    "time-grunt": "~0.3.1",
+    "grunt-contrib-uglify": "~0.6.0",
+    "grunt-contrib-copy": "~0.6.0"
+  },
   "bugs": {
     "url": "https://github.com/polinome/jquery-pluploader/issues"
   },
